<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.neteru.tixtat.fragments.DiscreteVariablesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/calc_var_d"
                android:id="@+id/textView9"
                android:layout_marginBottom="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/entries_layout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:drawableLeft="@mipmap/ic_add_circle_outline_black_24dp"
                        android:drawableStart="@mipmap/ic_add_circle_outline_black_24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_entry"
                        android:id="@+id/add_entry" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:gravity="end|center"
                        android:text="@string/calculations"
                        android:id="@+id/show_calculations"
                        android:drawableEnd="@mipmap/ic_expand_less_black_18dp"
                        android:drawableRight="@mipmap/ic_expand_less_black_18dp"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/checkboxes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:orientation="vertical">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/all_select"
                            android:id="@+id/all"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/moyenne_str"
                            android:id="@+id/moyenne"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/mediane_str"
                            android:id="@+id/mediane"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/quartiles_str"
                            android:id="@+id/quartiles"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/mode_str"
                            android:id="@+id/mode"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/variance_str"
                            android:id="@+id/variance"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/cov_coef_str"
                            android:id="@+id/covariance"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/ecart_str"
                            android:id="@+id/ecart"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/coef_str"
                            android:id="@+id/coef"
                            android:checked="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/graphic_rep"
                            android:id="@+id/courbe"
                            android:checked="true" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/calculate_str"
                android:id="@+id/calculBut" />

            <LinearLayout
                android:id="@+id/bloc"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/statsTableTitle"
                    android:gravity="center"
                    android:text="@string/stats_table"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TableLayout
                    android:background="@drawable/border"
                    android:id="@+id/statsTable"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/resolution" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/charts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:clickable="true"
                                android:focusable="true"
                                android:id="@+id/previous"
                                android:layout_width="60dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:contentDescription="@string/previous"
                                android:src="@mipmap/ic_chevron_left_white_24dp"/>

                            <ImageView
                                android:clickable="true"
                                android:focusable="true"
                                android:id="@+id/next"
                                android:layout_width="60dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:contentDescription="@string/next"
                                android:src="@mipmap/ic_chevron_right_white_24dp"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/line_chart"
                                android:layout_marginTop="@dimen/graph_top"
                                android:layout_width="match_parent"
                                android:layout_height="350dp" />

                            <com.github.mikephil.charting.charts.BarChart
                                android:id="@+id/v_bar_chart"
                                android:layout_marginTop="@dimen/graph_top"
                                android:layout_width="match_parent"
                                android:layout_height="350dp" />

                            <com.github.mikephil.charting.charts.HorizontalBarChart
                                android:id="@+id/h_bar_chart"
                                android:layout_marginTop="@dimen/graph_top"
                                android:layout_width="match_parent"
                                android:layout_height="350dp" />

                            <com.github.mikephil.charting.charts.BubbleChart
                                android:id="@+id/buble_chart"
                                android:layout_marginTop="@dimen/graph_top"
                                android:layout_width="match_parent"
                                android:layout_height="350dp" />

                            <com.github.mikephil.charting.charts.ScatterChart
                                android:id="@+id/point_chart"
                                android:layout_marginTop="@dimen/graph_top"
                                android:layout_width="match_parent"
                                android:layout_height="350dp" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/line_point_chart"
                                android:layout_marginTop="@dimen/graph_top"
                                android:layout_width="match_parent"
                                android:layout_height="350dp" />

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
